# NL2SQL

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py  query_generator.py  schema_formatter.py
agents/discovery/: discovery_agent.py  fk_graph_agent.py  keyword_agent.py  semantic_agent.py
agents/explainer/: explainer_agent.py  explanation_agent.py  optimization_agent.py  safety_report_agent.py
agents/validator/: logic_validator.py  performance_validator.py  security_validator.py  syntax_validator.py  validator_agent.py
backend/: config.py
config/: settings.py
db/: connector.py
filters/: gate.py  security_filter.py
logs/: bench_dev_full.json  bench_train_others_full.json
models/: schemas.py
nl2sql_agents/: __init__.py  cli.py
nl2sql_agents/agents/: base_agent.py  query_generator.py  schema_formatter.py
nl2sql_agents/agents/discovery/: discovery_agent.py  fk_graph_agent.py  keyword_agent.py  semantic_agent.py
nl2sql_agents/agents/explainer/: explainer_agent.py  explanation_agent.py  optimization_agent.py  safety_report_agent.py
nl2sql_agents/agents/validator/: logic_validator.py  performance_validator.py  security_validator.py  syntax_validator.py  validator_agent.py
nl2sql_agents/cache/: schema_cache.py
nl2sql_agents/config/: settings.py
nl2sql_agents/db/: connector.py
nl2sql_agents/filters/: gate.py  security_filter.py
nl2sql_agents/orchestrator/: nodes.py  pipeline.py
orchestrator/: nodes.py  pipeline.py
tests/: README.md  conftest.py
tests/benchmarks/: run_spider_bench.py  test_spider_accuracy.py
tests/integration/: test_discovery_pipeline.py  test_full_pipeline.py  test_validation_pipeline.py
tests/unit/: test_cli.py  test_connector.py  test_explainer_agents.py  test_fk_graph_agent.py  test_gate.py  test_keyword_agent.py  test_nodes_pipeline.py  test_schema_cache.py  test_security_filter.py  test_security_validator.py
web/static/: main.js
web/templates/: index.html
